crates/reinhardt-pages/tests/ui/form/fail/file_attrs_reject_text_input.rs
use reinhardt_pages::form;

fn main() {
	let _form = form! {
		name: InvalidFileAttrsForm,
		action: "/invalid",
		fields: {
			title: CharField {
				widget: TextInput,
				accept: "image/png",
			}
		}
	};
}
